修复启动流程的bug